# Hackaton

./: Makefile  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: import_lyon_data.py
backend/api/migrations/: 0001_initial.py  0002_quartier_demographics_quartier_temp_and_more.py  0003_link_quartiers.py
backend/config/: settings.py  urls.py
backend/data/: Dataset_D_mographie_Lyon.csv  Dataset_Immobilier_Lyon.csv  Dataset_Qualit__de_Vie_Lyon.csv  Historique_D_mographie_Lyon__2018-2024_.csv  Historique_Immobilier_Lyon__2018-2024_.csv  Historique_Qualit__de_Vie_Lyon__2018-2024_.csv
hackaton_front_react/: index.html  package-lock.json  package.json  vite.config.js
hackaton_front_react/src/: App.jsx  index.css  main.jsx
hackaton_front_react/src/assets/styles/: global.css  global.css.map
hackaton_front_react/src/components/: AgeDistributionChart.jsx  BarChart.jsx  Chart.jsx  DataTabs.jsx  DemographicsTable.jsx  DemographyTable.jsx  GenderDistributionChart.jsx  LineChart.jsx  PopulationEvolutionChart.jsx  PriceEvolutionChart.jsx  QualityOfLifeTable.jsx  QuartiersList.jsx  RealEstateTable.jsx  SalesEvolutionChart.jsx  StatsQuartier.jsx
hackaton_front_react/src/hooks/: useDemographics.js  useQuartiers.js  useRealEstate.js
hackaton_front_react/src/layouts/: Footer.jsx  Header.jsx
hackaton_front_react/src/pages/: AboutUs.jsx  Home.jsx
hackaton_front_react/src/services/: api.js
(+8 files in other folders)
